Bug 1168226 - ServiceWorkerRegistrar only use the scope when registering a service worker. r=baku